--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     margin: 0;
     background-color: #333;
-    color: #fff;
+    color: #eee;
 }
 
 #village-container {
