--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ body {
     font-family: 'Arial', sans-serif;
     text-align: center;
     margin: 0;
-    background-color: #333;
-    color: #39414f;
+    background-color: #39414f;
+    color: #fff;
 }
 
 #village-container {
