--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 #village-container {
     margin: 50px;
-     background-color: #39414f;
+    background-color: #39414f;
 }
 
 button {
@@ -36,5 +36,13 @@ button:hover {
     height: 30px;
     margin: 5px;
     background-color: #ddd;
+    display: inline-block;
+}
+
+.house-icon {
+    width: 30px;
+    height: 30px;
+    margin: 5px;
+    background-color: #e0c04b;
     display: inline-block;
 }
