--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #2b2b2b;
+    background-color: #7979B6;
     margin: 0;
     display: flex;
     justify-content: center;
