--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 button {
-    background-color: #4CAF50;
+    background-color: #5E5EF0;
     color: white;
     padding: 10px;
     border: none;
