--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
 }
 
-#goldDisplay {
+#metalPlateDisplay {
   font-size: 24px;
   margin-bottom: 10px;
 }
@@ -26,3 +26,4 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
