--- a/style.css
+++ b/style.css
@@ -1,26 +1,22 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  background-color: #f0f0f0;
+}
+
+#character-selection {
+  margin: 50px;
+}
+
+.character-card {
+  display: inline-block;
   margin: 20px;
-  background-color: #1a1a1a; /* Mørk bakgrunnsfarge */
-  color: #fff; /* Lys tekstfarge */
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.resources {
-  border: 1px solid #ccc;
-  padding: 10px;
-  margin-bottom: 20px;
-  background-color: #333; /* Mørk bakgrunnsfarge for ressurser */
-}
-
-.buttons button {
-  margin-right: 10px;
-  margin-bottom: 10px;
-  background-color: #444; /* Mørk bakgrunnsfarge for knapper */
-  color: #fff; /* Lys tekstfarge for knapper */
-}
-
-/* Blokkerer zoom ved dobbeltklikk */
-body {
-  touch-action: manipulation;
-  -webkit-text-size-adjust: 100%;
+#homebase {
+  display: none;
 }
