--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Arial', sans-serif;
     text-align: center;
-    margin: 50px;
+    background-color: #222;
+    color: #fff;
 }
 
 #container {
@@ -15,4 +16,8 @@ button {
     padding: 5px 10px;
     font-size: 16px;
     cursor: pointer;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
 }
