--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    touch-action: manipulation;
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
     background-color: #121212; /* Dark blue background color */
     color: #ffffff; /* White text color */
-    touch-action: manipulation; /* Disable zooming on double-click for iPhone Safari */
 }
 
 .container {
@@ -18,24 +21,6 @@ body {
 h1 {
     margin-bottom: 20px;
 }
-
-.button {
-    display: inline-block;
-    padding: 15px 30px;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    background-color: #1e90ff; /* Dodger Blue button color */
-    color: #ffffff; /* White text color */
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.button:hover {
-    background-color: #4169e1; /* Darker shade on hover */
-}
-
-/* Your existing styles */
 
 #plant-container {
     text-align: center;
@@ -62,4 +47,8 @@ h1 {
 #evolution-options {
     text-align: center;
     margin-top: 20px;
+}
+
+.hidden {
+    display: none;
 }
