--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,24 @@
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: #121212;
-  color: #ffffff;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #262626; /* Mørk bakgrunnsfarge */
+  color: #fff; /* Hvit tekstfarge */
 }
 
-.container {
-  text-align: center;
+#counterButton {
+  font-size: 16px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: #444; /* Mørk knappfarge */
+  color: #fff; /* Hvit tekstfarge */
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 
-.textbox {
-  background-color: #1f1f1f;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.hidden {
-  display: none;
-}
-button {
-  margin: 5px;
+#counterButton:hover {
+  background-color: #555; /* Mørkere knappfarge ved hover */
 }
