--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,31 @@ body {
   border-radius: 8px;
 }
 
+#counterContainer, #inventoryBox {
+  text-align: center;
+}
+
+#counterButton {
+  font-size: 16px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: #444; /* Mørk knappfarge */
+  color: #fff; /* Hvit tekstfarge */
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+#counterButton:hover {
+  background-color: #555; /* Mørkere knappfarge ved hover */
+}
+
 #inventoryBox {
-  max-width: 400px;
+  max-width: 200px;
   padding: 20px;
   background-color: #333; /* Mørk boks med smooth edges for inventar */
   border-radius: 8px;
-  text-align: center;
+  margin-left: 20px; /* Margin mellom teller og inventar */
 }
 
 h2 {
@@ -40,23 +59,4 @@ li {
 
 li:last-child {
   border-bottom: none; /* Fjern linje på siste element */
-}
-
-#counterContainer {
-  text-align: center;
-}
-
-#counterButton {
-  font-size: 16px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: #444; /* Mørk knappfarge */
-  color: #fff; /* Hvit tekstfarge */
-  border: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-
-#counterButton:hover {
-  background-color: #555; /* Mørkere knappfarge ved hover */
 }
