--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -11,9 +10,12 @@ body {
 
 #contentContainer {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
+}
+
+#storyContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #storyBox {
@@ -22,6 +24,25 @@ body {
   padding: 20px;
   background-color: #333; /* Mørk farge for tekstboksen */
   border-radius: 8px;
+}
+
+#counterContainer {
+  text-align: center;
+}
+
+#counterButton {
+  font-size: 16px;
+  padding: 10px;
+  cursor: pointer;
+  background-color: #444; /* Mørk knappfarge */
+  color: #fff; /* Hvit tekstfarge */
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+#counterButton:hover {
+  background-color: #555; /* Mørkere knappfarge ved hover */
 }
 
 #inventoryBox {
@@ -48,24 +69,4 @@ li {
 
 li:last-child {
   border-bottom: none; /* Fjern linje på siste element */
-}
-
-#counterContainer {
-  text-align: center;
-  margin-top: 20px; /* Legg til margin over teller for å gi plass */
-}
-
-#counterButton {
-  font-size: 16px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: #444; /* Mørk knappfarge */
-  color: #fff; /* Hvit tekstfarge */
-  border: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
-}
-
-#counterButton:hover {
-  background-color: #555; /* Mørkere knappfarge ved hover */
 }
