--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   background-color: #262626; /* Mørk bakgrunnsfarge */
@@ -43,6 +44,28 @@ body {
 
 #counterButton:hover {
   background-color: #555; /* Mørkere knappfarge ved hover */
+}
+
+#shopContainer {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#buyMediumWallet,
+#buySmallDagger {
+  margin: 10px;
+  font-size: 14px;
+  padding: 8px;
+  cursor: pointer;
+  background-color: #444;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+}
+
+#buyMediumWallet:hover,
+#buySmallDagger:hover {
+  background-color: #555;
 }
 
 #inventoryBox {
